fix: load detail trip and mountain progressbar

--- a/app/src/main/res/layout/fragment_cust_detail_trip.xml
+++ b/app/src/main/res/layout/fragment_cust_detail_trip.xml
@@ -10,15 +10,12 @@
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_gravity="center"
+        android:visibility="visible" />
 
     <!-- ScrollView to hold the content -->
     <ScrollView
+        android:id="@+id/scrollViewDetailTrip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
