--- a/app/src/main/res/layout/fragment_cust_profile.xml
+++ b/app/src/main/res/layout/fragment_cust_profile.xml
@@ -47,12 +47,12 @@
                     android:id="@+id/buttonEditPhoto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="-40dp"
-                    android:layout_marginTop="-40dp"
+                    android:layout_marginStart="-32dp"
+                    android:layout_marginTop="-36dp"
                     android:layout_marginBottom="8dp"
-                    android:background="@drawable/circle_background"
+                    android:background="@drawable/custom_circle_background_2"
                     android:backgroundTint="@color/green_primary"
-                    android:padding="10dp"
+                    android:padding="6dp"
                     android:src="@drawable/ic_baseline_camera_alt_24"
                     app:circularflow_radiusInDP="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -87,6 +87,7 @@
                     android:backgroundTint="@color/green_primary"
                     android:drawableRight="@drawable/ic_edit"
                     android:drawablePadding="8dp"
+                    android:paddingBottom="3dp"
                     android:drawableTint="@color/white"
                     android:paddingHorizontal="16dp"
                     android:text="Edit"
@@ -99,7 +100,9 @@
                     android:layout_marginStart="8dp"
                     android:backgroundTint="@color/green_light"
                     android:drawableRight="@drawable/ic_heart_filled"
+
                     android:drawablePadding="8dp"
+                    android:paddingBottom="3dp"
                     android:drawableTint="@color/green_primary"
                     android:paddingHorizontal="16dp"
                     android:text="Favorite"
