--- a/app/src/main/res/layout/fragment_cust_order_details.xml
+++ b/app/src/main/res/layout/fragment_cust_order_details.xml
@@ -6,8 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.cust.order.OrderDetailsFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="visible" />
+
     <ScrollView
-        android:id="@+id/scrollView"
+        android:id="@+id/scrollViewContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white">
